# oasis1-dementia-bench

./: .gitignore  Makefile  README.md  pyproject.toml
data/raw/oasis1/: README.md
docs/err/tab/: README.md  summary.json
scripts/: bench_cnn_best.sh  bench_tab.sh  mk_pipeline_fig.py  prep_oasis1.sh  xai.sh
src/obench/: bayes.py  bench.py  cal.py  cli.py  cnn2d.py  cnnlit.py  eda.py  emb2d.py  err.py  fuse.py  index.py  io.py  manifest.py  split.py  tab.py  xai.py
src/obench/utils/: fp.py  img.py
tests/: test_bayes.py  test_cal.py  test_img.py  test_index.py  test_manifest.py  test_split.py
