[project]
name = "obench"
version = "0.1.0"
description = "OASIS-1 dementia classification benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "nibabel>=5.2",
  "openpyxl>=3.1",
  "torch>=2.2",
  "tqdm>=4.66",
  "pytest>=8.0",
]

[project.scripts]
obench = "obench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
